Fixed touch scroll on mobile

--- a/assets/css/style_4.5.css
+++ b/assets/css/style_4.5.css
@@ -465,6 +465,7 @@ a.scrollup:hover {
   position: fixed;
   overflow-y: scroll;
   width: 100%;
+  -webkit-overflow-scrolling: touch;
 }
 .shadow { /* SAY */
   box-shadow: 0 .125rem rgba(0,0,0,.15);
